--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,112 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+body {
+  padding: 20px;
   color: white;
+  background-color: rgb(230, 225, 220);
+  font-size: 28px;
+ }
+.post {
+  width: 70%;
+  height: auto;
+  margin: 80px auto 0 auto;
+  padding: 30px;
+  background: rgb(21, 32, 43);
+  border-radius: 10px;
+}
+.wrapper {
+  width: 80%;
+  height: 90px;
+  display: grid;
+  grid-template-rows: 1fr 1fr;
+  grid-template-columns: 10% (30% 30% 30%);
 }
 
-.App-link {
-  color: #61dafb;
+.user-image{
+  position: relative;
+  top: -60px;
+  border-radius: 50%;
+  width: 100px;
+  grid-column-start: 0;
+  grid-column-end: 1;
+  grid-row-start: 0;
+  grid-row-end: 2;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.user-name {
+  position: relative;
+  top: -20px;
+  font-weight: bold;
+  padding: 3px;
+  grid-column-start: 1;
+  grid-column-end: 2;
+  grid-row-start: 0;
+  grid-row-end: 1;
 }
+.user-nickname {
+  margin-left: 30px;
+  margin-top: -20px;
+  text-decoration: none;
+  padding: 3px;
+  color: rgb(80, 78, 78);
+  grid-column-start: 2;
+  grid-column-end: 3;
+  grid-row-start: 0;
+  grid-row-end: 1;
+}
+.post-date {
+  margin-top: -20px;
+  padding: 3px;
+  color: rgb(80, 78, 78);
+  grid-column-start: 3;
+  grid-column-end: 4;
+  grid-row-start: 0;
+  grid-row-end: 1;
+} 
+.post-content {
+  position: relative;
+  top: -20px;
+  padding: 3px;
+  grid-column-start: 1;
+  grid-column-end: 4;
+  grid-row-start: 1;
+  grid-row-end: 2;
+}
+
+.post-image {
+  width: 85%;
+  margin: 0 0 0 110px;
+  border-radius: 20px;
+}
+
+.statistics {
+  margin: 0 0 0 110px;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  color: rgb(126, 126, 126);
+}
+
+.statistics_comments::before,
+.statistics_shares::before,
+.statistics_likes::before,
+.statistics_save {
+     position: relative; 
+    top: 15px;
+     left: -20px; 
+}
+
+.statistics_likes::before {
+  content: url(./assests/img/likes.png);
+}
+.statistics_comments::before {
+    content: url(./assests/img/comments.png);
+}
+
+.statistics_shares::before {
+    content: url(./assests/img/shares.png);
+}
+
+.statistics_save {
+    content: url(./assests/img/save.png);
+    top: 10px;
+}
+
+
